esboco do banner pronto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
-
+  <section class="section">
+    <div class="container">
+      <div class="banner">
+        <div class="text">
+          <h2 class="title">PROJECT</h2>
+          <h2 class="subtitle">LORUN</h2>
+          <img class="numbers" src="./img/slide-numbers.png" alt="">
+        </div>
+        <div>
+          <img class="image" src="./img/Rectangle 6.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
