--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
+  <section class="section -mission">
+    <div class="container">
+      <h2 class="title">Main Focus/Mission Statement</h2>
+      <div class="columns">
+        <ul class="list">
+          <li class="number">1</li>
+          <li class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat.</li>
+        </ul>
+        <ul class="list">
+          <li class="number">2</li>
+          <li class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat, magna mauris porttitor tortor, a auctor est felis ut nisl.</li>
+        </ul>
 
+      </div>
+
+    </div>
+
+  </section>
 </body>
 
 </html>
