correcoes realizadas conforme solicitado no git

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <div class="container">
+    <nav class="container">
       <a class="icon" href="./">
         <svg xmlns="http://www.w3.org/2000/svg" width="69" height="42" fill="none">
           <g fill="#333">
@@ -27,19 +27,19 @@
         </svg>
       </a>
       <ul id="list-menu" class="list">
-        <li class="items">
+        <li class="item">
           <a href="./">Inicio</a>
         </li>
-        <li class="items">
+        <li class="item">
           <a href="./">Galeria</a>
         </li>
-        <li class="items">
+        <li class="item">
           <a href="./">Projetos</a>
         </li>
-        <li class="items">
+        <li class="item">
           <a href="./">Certificados</a>
         </li>
-        <li class="items">
+        <li class="item">
           <a href="./">Contatos</a>
         </li>
       </ul>
@@ -52,7 +52,7 @@
           </g>
         </svg>
       </button>
-    </div>
+    </nav>
   </header>
   <script src="javaScript.js"></script>
 </body>
