--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     <div class="container">
       <div class="banner">
         <div class="text">
-          <h2 class="title">PROJECT</h2>
-          <h2 class="subtitle">LORUN</h2>
+          <h1 class="title">PROJECT <br><span class="subtitle">LORUN</span></h1>
           <img class="numbers" src="./img/slide-numbers.png" alt="">
         </div>
-        <div>
-          <img class="image" src="./img/Rectangle 6.png" alt="">
-        </div>
+        <img class="image" src="./img/Rectangle 6.png" alt="predio">
       </div>
     </div>
   </section>
