alterado  a "alt" da img

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h1 class="title">PROJECT <br><span class="subtitle">LORUN</span></h1>
           <img class="numbers" src="./img/slide-numbers.png" alt="">
         </div>
-        <img class="image" src="./img/Rectangle 6.png" alt="predio">
+        <img class="image" src="./img/Rectangle 6.png" alt="prédio">
       </div>
     </div>
   </section>
