realizada algumas alteracoes solicitadas no git

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
   <section class="section -description">
     <div class="container">
       <div class="column-images">
-        <div>
-          <img class="image" src="./img/Rectangle 8.png" alt="">
-        </div>
-        <div>
-          <img class="image" src="./img/Rectangle 10.png" alt="">
-        </div>
+        <img class="image" src="./img/Rectangle 8.png" alt="projeto de Arquitetura">
+        <img class="image" src="./img/Rectangle 10.png" alt="projeto de Arquitetura">
       </div>
       <div class="column-image">
-        <img class="image" src="./img/Rectangle 9.png" alt="">
+        <img class="image" src="./img/Rectangle 9.png" alt="projeto de Arquitetura">
       </div>
       <div class="column-text">
         <h2 class="title">About</h2>
