--- a/index.html
+++ b/index.html
@@ -12,20 +12,11 @@
   <section class="section -mission">
     <div class="container">
       <h2 class="title">Main Focus/Mission Statement</h2>
-      <div class="columns">
-        <ul class="list">
-          <li class="number">1</li>
-          <li class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat.</li>
-        </ul>
-        <ul class="list">
-          <li class="number">2</li>
-          <li class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat, magna mauris porttitor tortor, a auctor est felis ut nisl.</li>
-        </ul>
-
-      </div>
-
+      <ul class="columns">
+        <li class="text"> <span class="number"> 1 </span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat.</li>
+        <li class="text"><span class="number"> 2 </span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis placerat, magna mauris porttitor tortor, a auctor est felis ut nisl.</li>
+      </ul>
     </div>
-
   </section>
 </body>
 
