--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
       <h2 class="title">Contact Us</h2>
       <div class="columns">
         <div class="form">
-          <form class="form-contact" method="POST" action="http://www.polux-rs.com.br/contato">
-            <input type="hidden" name="_token" value="O8F6etR7JQ4jHrVBxg0TPChIUCeyXFqEh02pfRG9">
-
-            <input class="input" name="name" required="" placeholder="Name" type="text">
-            <input class="input" name="phone" required="" placeholder="Phone Number" type="phone">
-            <input class="input" name="name" required="" placeholder="Interested In" type="text">
-            <input class="input" name="email" required="" placeholder="Message" type="email">
+          <form class="form-contact">
+            <input class="input" name="name" required placeholder="Name" type="text">
+            <input class="input" name="phone" required placeholder="Phone Number" type="phone">
+            <input class="input" name="name" required placeholder="Interested In" type="text">
+            <input class="input" name="email" required placeholder="Message" type="email">
             <textarea class="input -text" name="message" required="" placeholder="Mensagem" rows="4"></textarea>
             <button class="button-email" type="submit">Send Email <svg xmlns="http://www.w3.org/2000/svg" width="18" height="9" viewBox="0 0 18 9" fill="none">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.49976C0 4.22361 0.223858 3.99976 0.5 3.99976L16.5 3.99976C16.7761 3.99976 17 4.22361 17 4.49976C17 4.7759 16.7761 4.99976 16.5 4.99976L0.5 4.99976C0.223858 4.99976 0 4.7759 0 4.49976Z" fill="white" />
@@ -29,9 +27,9 @@
               </svg></button>
           </form>
         </div>
-        <div>
-          <img src="./img/image 12.png" alt="">
-        </div>
+        <picture>
+          <img src="./img/image-12.png" alt="">
+        </picture>
       </div>
     </div>
   </section>
