--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
   <footer class="footer">
     <div class="container">
       <div class="columns">
-        <picture>
-          <img class="image" src="./img/Group-11-1.png" alt="">
-        </picture>
-
-        <nav>
+        <img class="image" src="./img/Group-11-1.png" alt="logo digital project">
+        <div>
           <h2 class="title">Information</h2>
           <ul class="information">
             <li> <a href="./">Main</a> </li>
@@ -84,9 +81,9 @@
             <li> <a href="./">Certifications</a> </li>
             <li> <a href="./">Contacts</a> </li>
           </ul>
-        </nav>
+        </div>
 
-        <nav>
+        <div>
           <h2 class="title">Contacts</h2>
           <ul class="contact">
             <li> <a href="./"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="11" height="16" viewBox="0 0 11 16" fill="none">
@@ -103,9 +100,9 @@
                   <path d="M8.13945 6.16166L8.13943 6.16163L8.13512 6.16456C8.10734 6.18343 8.06694 6.19696 8.0235 6.19696H8.02008C7.95651 6.19696 7.91576 6.17544 7.90255 6.1642L7.90186 6.16361L1.09985 0.4H14.9358L8.4497 5.90252L8.44932 5.90285L8.16437 6.1452L8.16349 6.14579L8.13945 6.16166ZM10.0346 6.48934L15.0112 10.6H0.983875L5.97125 6.45877L6.96401 7.30051L6.9651 7.30143C7.25806 7.54803 7.63451 7.67805 8.02235 7.67805C8.4099 7.67805 8.78655 7.54692 9.07963 7.29972L9.08053 7.29895L10.0346 6.48934ZM4.82991 5.4915L0.4 9.17041V1.73773L4.82991 5.4915ZM15.6 1.76878V9.17559L11.1765 5.52124L15.6 1.76878Z" stroke="white" stroke-width="0.8" />
                 </svg>sampleemail@gmail.com</a> </li>
           </ul>
-        </nav>
+        </div>
 
-        <nav class="social-media">
+        <div class="social-media">
           <h2 class="title">Social Media</h2>
           <ul class="media">
             <li> <a href="./"><svg class="social" xmlns="http://www.w3.org/2000/svg" width="12" height="24" viewBox="0 0 10 19" fill="none">
@@ -149,7 +146,7 @@
                   </defs>
                 </svg></a> </li>
           </ul>
-        </nav>
+        </div>
       </div>
     </div>
 
