coloquei o link no header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="./">Galeria</a>
         </li>
         <li class="item">
-          <a href="./">Projetos</a>
+          <a href="./page-projects.html">Projetos</a>
         </li>
         <li class="item">
           <a href="./">Certificados</a>
