coloquei o alt nas imagens

--- a/gallery.html
+++ b/gallery.html
@@ -68,26 +68,26 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     <div class="container">
       <div class="splide__track">
         <ul class="splide__list">
-          <li class="splide__slide"><img src="./img/Rectangle-22.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/rectangle-23.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-24.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-25.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-26.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-27.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-28.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-29.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-30.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-31.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-22.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/rectangle-23.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-24.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-25.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-26.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-27.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-28.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-29.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-30.png" alt=""></li>
-          <li class="splide__slide"><img src="./img/Rectangle-31.png" alt=""></li>
+          <li class="splide__slide"><img src="./img/Rectangle-22.png" alt="">imagem cinza</li>
+          <li class="splide__slide"><img src="./img/rectangle-23.png" alt="">farol no mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-24.png" alt="">varanda de um predio</li>
+          <li class="splide__slide"><img src="./img/Rectangle-25.png" alt="">farol do mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-26.png" alt="">castelo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-27.png" alt="">interior de um castelo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-28.png" alt="">rua</li>
+          <li class="splide__slide"><img src="./img/Rectangle-29.png" alt="">predio antigo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-30.png" alt="">mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-31.png" alt="">predio</li>
+          <li class="splide__slide"><img src="./img/Rectangle-22.png" alt="">imagem cinza</li>
+          <li class="splide__slide"><img src="./img/rectangle-23.png" alt="">farol no mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-24.png" alt="">varanda de um predio</li>
+          <li class="splide__slide"><img src="./img/Rectangle-25.png" alt="">farol do mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-26.png" alt="">castelo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-27.png" alt="">interior de um castelo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-28.png" alt="">rua</li>
+          <li class="splide__slide"><img src="./img/Rectangle-29.png" alt="">predio antigo</li>
+          <li class="splide__slide"><img src="./img/Rectangle-30.png" alt="">mar</li>
+          <li class="splide__slide"><img src="./img/Rectangle-31.png" alt="">predio</li>
         </ul>
       </div>
     </div>
